--- a/index.html
+++ b/index.html
@@ -1,81 +1,55 @@
-const inputfield=document.getElementById('input');
-const ansfield=document.getElementById('ans');
-const buttons=document.querySelectorAll('.circle');
-let currentinput='';
-let operand1='';
-let operator='';
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+   </head>
+<body>
+    <h1>Basic Calculator</h1>
+    <div class="main">
+        <div id="in">
+        <input id="input">
+        </div>
+         <p id="ans"></p>
+        <div class="btn">
+        <div class="first line">
+            <div class="circle sym">AC</div>
+            <div class="circle sym">Del</div>
+            <div class="circle sym">%</div>
+            <div class="circle op">/</div>
+        </div>
 
-buttons.forEach((button)=>{
-    button.addEventListener("click", function(){
-        let value=button.textContent;
-        if(value==='AC'){
-        clearAll();
-        return;
-        }
-        if(value==='Del'){
-       currentinput=currentinput.slice(0, -1);
-       inputfield.value=currentinput;
-        return;
-        }
-        if(isNaN(value) && value!=='.' && value!=='='){
-            if(operator && operand1){
-                operator=value;
-                currentinput +=' '+operator+' ';
-            }else{
-                operator=value;
-                operand1=currentinput;
-                currentinput+= ' '+ operator+ ' ';
-            }
-        }
-        else if(value==='='){
-            if(currentinput){
-                calculate();
-                return;
-            }
-        }
-        else{
-            currentinput+=value;
-        }
-        inputfield.value = currentinput;
-    })
-})
-function clearAll(){
-    currentinput='';
-    operand1='';
-    operand2='';
-    inputfield.value='';
-    ansfield.textContent='';
-}
-function calculate(){
-    const parts=currentinput.split(' ');
-    if(parts.length<3){
-    return;
-    }
-    operand1= parseFloat(parts[0]);
-   const operand2=parseFloat(parts[2]);
-    operator=parts[1];
-    let result;
-    switch(operator){
-        case '+':
-            result=operand1+operand2;
-            break;
-        case '-':
-            result=operand1-operand2;
-            break;
-        case '*':
-            result=operand1 * operand2;
-            break;
-        case '/':
-            result=operand2!=0? operand1/operand2:Error;
-            break;
-        case '%':
-            result=operand1%operand2;
-            break;
-        default:
-            break;
-    }
-    ansfield.textContent=result|| 'Error';
-    currentinput='';
-    operator='';
-    inputfield.value='';
-}
+        <div class="second line">
+            <div class="circle">7</div>
+            <div class="circle">8</div>
+            <div class="circle">9</div>
+            <div class="circle op">x</div>
+        </div>
+
+        <div class="third line">
+            <div class="circle">4</div>
+            <div class="circle">5</div>
+            <div class="circle">6</div>
+            <div class="circle op">-</div>
+        </div>
+
+        <div class="fourth line">
+            <div class="circle">1</div>
+            <div class="circle">2</div>
+            <div class="circle">3</div>
+            <div class="circle op">+</div>
+        </div>
+
+        <div class="fifth line">
+            <div class="circle">0</div>
+            <div class="circle">00</div>
+            <div class="circle">.</div>
+            <div class="circle op">=</div>
+        </div>
+    </div>
+     </div>
+    <script src="script.js"></script>
+</body>
+</html>
